--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -32,7 +32,7 @@
 
 <div>
 	<div id="header-region"></div>
-	<div id="sidebar-region"></div>
+	<div id="left-nav-region"></div>
 	<div id="content-region"></div>
 </div>
 <div id="dialog-region"></div>
