--- a/HTML/textbooks.html
+++ b/HTML/textbooks.html
@@ -288,7 +288,7 @@
           <div class="meta class">Class <span class="sort anim150 asc" data-sort="data-class" data-order="desc"></span> <span class="sort anim150 desc" data-sort="data-class" data-order="asc"></span></div>
           <div class="meta rec">Subjects</div>
           <div class="meta area"> Chapters/Sections </div>
-          <div class="meta"> Questions/Quizzes </div>
+          <div class="meta area"> Questions/Quizzes </div>
         </div>
         <!-- FAIL ELEMENT -->
         <div class="fail_element anim250">Sorry &mdash; we could not find any Textbooks matching matching these criteria</div>
