--- a/HTML/add-question.html
+++ b/HTML/add-question.html
@@ -283,7 +283,7 @@
 								<li id="menu-item-29" class="menu-item menu-item-type-custom menu-item-object-custom level0 has-sub"><a href="#"><i class="fa fa-facebook"></i>Social Media<i class="fa fa-caret-down"></i></a></li>
 								<li id="menu-item-36" class="menu-item menu-item-type-custom menu-item-object-custom level0 has-sub"><a href="#">Questions<i class="fa fa-caret-down"></i></a>
 
-<div class="sub-content" style="display: block;">
+<div class="sub-content" style="display: none;">
 
 <div class="wrapper">
 	<div class="pull-right"><a href="#"><i class="fa fa-times"></i></a></div>
