save, preview buttons added

--- a/HTML/add-question.html
+++ b/HTML/add-question.html
@@ -562,6 +562,10 @@
 
 				<div class="dock tiles">
 					
+				<div class="builder_actions">
+					<button type="button" class="btn btn-success btn-cons2"><i class="fa fa-check"></i> Save</button> <button type="button" class="btn btn-success btn-cons2"><i class="fa fa-eye"></i> Preview</button>
+				</div>
+
 					<div class="tiles green">
 					  <div class="tiles-head">
 					    <h4 class="text-white"><span class="semi-bold">Properties </span>Dock</h4>
