--- a/wp-content/themes/walnut/walnut/index-app.html
+++ b/wp-content/themes/walnut/walnut/index-app.html
@@ -42,7 +42,7 @@
 	
 </div>
 </div>
-<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script>
-<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/ajaxurl-app.js"></script>
+<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script> 
+<!-- <script type="text/javascript" data-main="/dev/js/walnut-main" src="/production/walnut-main.js"></script> -->
 </body>
 </html>
