--- a/HTML/add-question.html
+++ b/HTML/add-question.html
@@ -15,6 +15,8 @@
 	<link href="assets/plugins/boostrapv3/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/plugins/boostrapv3/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" rel="stylesheet" type="text/css" />
+	<link href="assets/plugins/boostrap-slider/css/slider.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/animate.min.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/mashmenu.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
@@ -56,6 +58,8 @@
 		<script type="text/javascript" src="assets/js/datatables.js"></script>
 
 		<script type="text/javascript" src="assets/js/row-link.js"></script>
+		<script src="assets/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js" type="text/javascript"></script>
+		<script src="assets/plugins/boostrap-slider/js/bootstrap-slider.js" type="text/javascript"></script>
 
 	<!-- END NEED TO WORK ON -->
 
@@ -628,6 +632,39 @@
             </div>
 					</div>
 
+					<div class="docket">
+						<div class="tile-more-content no-padding">
+			              <div class="tiles green">
+			                <div class="tile-footer drag">
+			                  Text Properties 
+			                </div>
+			                <div class="docket-body">
+
+								<div class="form-group">
+									<textarea class="textarea" placeholder="Enter Text here"></textarea>
+								</div>
+								<div class="form-group">
+									 <select class="font">
+								        <option value="0">Select a Font</option>
+								        <option value="1">Times New Roman</option>
+								        <option value="2">Georgia</option>
+								        <option value="2">Helvetica</option>
+								    </select>
+								</div>
+
+								<div class="form-group">
+									<div class="textProp slider success">
+								      Size <input type="text" class="fontSize" data-slider-max="80" data-slider-step="1" data-slider-value="20" data-slider-orientation="horizontal" data-slider-selection="before">
+									</div>
+								</div>
+
+								
+
+			               	</div>
+			              </div>
+			            </div>
+					</div>
+
 				</div>
 			</div>
 			<!-- END PLACE PAGE CONTENT HERE -->
@@ -808,4 +845,7 @@
 </div>
 <!-- END CHAT --> 
 </body>
+<script>
+	$('.fontSize').slider();
+</script>
 </html>
