--- a/HTML/add-question.html
+++ b/HTML/add-question.html
@@ -658,7 +658,19 @@
 									</div>
 								</div>
 
-								
+								<div class="form-group textFormat" data-toggle="buttons-checkbox">
+									<div class="btn-group">
+					                    <button class="btn"><i class="fa fa-bold"></i></button>
+					                    <button class="btn"><i class="fa fa-italic"></i></button>
+					                    <button class="btn"><i class="fa fa-underline"></i></button>
+					                 </div>
+
+					                 <div class="btn-group">
+					                    <button class="btn"><i class="fa fa-align-left"></i></button>
+					                    <button class="btn"><i class="fa fa-align-center"></i></button>
+					                    <button class="btn"><i class="fa fa-align-right"></i></button>
+					                 </div>
+								</div>
 
 			               	</div>
 			              </div>
