--- a/HTML/add-question.html
+++ b/HTML/add-question.html
@@ -58,6 +58,7 @@
 		<script type="text/javascript" src="assets/plugins/datatables-responsive/js/lodash.min.js"></script>
 		<script type="text/javascript" src="assets/js/datatables.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.minicolors.min.js"></script>
+		<script type="text/javascript" src="assets/js/jquery.knob.js"></script>
 
 		<script type="text/javascript" src="assets/js/row-link.js"></script>
 		<script src="assets/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.js" type="text/javascript"></script>
@@ -676,6 +677,11 @@
 
 								<div class="form-group">
 									Color <input type="hidden" id="hidden-input" class="fontColor" value="#1a45a1">
+									Rotate <input type="text" class="dial" data-min="0" data-max="360" data-width="40" data-height="40" data-displayInput=false data-thickness=".7" data-fgColor="#0AA699">
+								</div>
+
+								<div class="form-group">
+									
 								</div>
 
 			               	</div>
@@ -871,5 +877,6 @@
 		position: 'top left',
 		showSpeed: 200
 	});
+	$(".dial").knob();
 </script>
 </html>
