builder properties style changes

--- a/HTML/add-question.html
+++ b/HTML/add-question.html
@@ -639,7 +639,7 @@
 						<div class="tile-more-content no-padding">
 			              <div class="tiles green">
 			                <div class="tile-footer drag">
-			                  Text Properties 
+			                  Hotspot <i class="fa fa-chevron-right"></i> <span class="semi-bold">Text Element</span> 
 			                </div>
 			                <div class="docket-body">
 
@@ -677,11 +677,13 @@
 
 								<div class="form-group">
 									Color <input type="hidden" id="hidden-input" class="fontColor" value="#1a45a1">
-									Rotate <input type="text" class="dial" data-min="0" data-max="360" data-width="40" data-height="40" data-displayInput=false data-thickness=".7" data-fgColor="#0AA699">
 								</div>
 
 								<div class="form-group">
-									
+									Rotate <input type="text" class="dial" data-min="0" data-max="360" data-width="40" data-height="40" data-displayInput=false data-thickness=".7" data-fgColor="#0AA699">
+								</div>
+								<div class="form-group">
+									<button type="button" class="btn btn-danger btn-small">Delete</button>
 								</div>
 
 			               	</div>
