--- a/HTML/miki-create.html
+++ b/HTML/miki-create.html
@@ -17,6 +17,7 @@
 	<link href="assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/animate.min.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/mashmenu.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/plugins/bootstrap-select2/select2.css" rel="stylesheet" type="text/css" media="screen">
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/responsive.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/custom-icon-set.css" rel="stylesheet" type="text/css"/>
@@ -57,6 +58,7 @@
 
 		<script type="text/javascript" src="assets/js/row-link.js"></script>
 		<script src="assets/plugins/jquery-ui-touch/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
+		<script src="assets/plugins/bootstrap-select2/select2.min.js" type="text/javascript"></script>
 
 	<!-- END NEED TO WORK ON -->
 
@@ -325,7 +327,7 @@
 							<div class="col-md-4">
 							    <div class="margin-bottom-20 ">
 									<label class="form-label">Objective</label>
-									<input name="" id="" type="text" class="form-control" placeholder="Enter Objective">
+									<textarea class="form-control" placeholder="Enter Objective"></textarea>
 									</div>
 							</div>
 							<div class="col-md-4">
@@ -337,7 +339,11 @@
 							<div class="col-md-4">
 							    <div class="margin-bottom-20 ">
 									<label class="form-label">Subject</label>
-									<input name="" id="" type="text" class="form-control" placeholder="Enter Subject">
+									<select id="subs" class="form-control select2" >
+					                    <option value="Jim">Jim</option>
+					                    <option value="John">John</option>
+					                    <option value="Lucy">Lucy</option>
+					                </select>
 								</div>
 							</div>												 
 						</div>
@@ -345,7 +351,7 @@
 								<div class="col-md-4">
 								   <div class="margin-bottom-20 ">
 									<label class="form-label">Description</label>
-									<textarea class="form-control" placeholder="Enter Description"></textarea>
+									<textarea rows="4" class="form-control" placeholder="Enter Description"></textarea>
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -356,12 +362,42 @@
 							</div>
 							<div class="col-md-4">
 							    <div class="margin-bottom-20 ">
-									<label class="form-label">Chapter</label>
-									<input name="" id="" type="text" class="form-control" placeholder="Enter Chapter">
+									<label class="form-label">Chapter <span class="muted small pull-right"> Select a Subject first</span></label>
+									<select id="chaps" class="form-control select2" >
+					                    <option value="Jim">Jim</option>
+					                    <option value="John">John</option>
+					                    <option value="Lucy">Lucy</option>
+					                </select>
 								</div>
 							</div>											 
 						</div>
-						<button type="button" class="btn btn-success btn-cons2 right" id="save-question"> <i class="fa fa-check"></i> Save</button>
+						<div class="row ">
+								<div class="col-md-4">
+								   <div class="margin-bottom-20 ">
+									<label class="form-label">Section <span class="muted small pull-right"> Select a Chapter first</span></label>
+									<select id="secs" class="form-control select2" multiple="">
+					                    <option value="Jim">Jim</option>
+					                    <option value="John">John</option>
+					                    <option value="Lucy">Lucy</option>
+					                </select>
+								</div>
+							</div>
+							<div class="col-md-4">
+							    <div class="margin-bottom-20 ">
+									<label class="form-label">Sub-Sections <span class="muted small pull-right"> Select a Chapter first</span></label>
+									<select id="subsecs" class="form-control select2" multiple="">
+					                    <option value="Jim">Jim</option>
+					                    <option value="John">John</option>
+					                    <option value="Lucy">Lucy</option>
+					                </select>
+								</div>
+							</div>
+							<div class="col-md-4">
+							    <div class="p-t-30 ">
+									<button type="button" class="btn btn-success btn-cons2 right" id="save-question"> <i class="fa fa-check"></i> Save</button>
+								</div>
+							</div>											 
+						</div>
 					</div>
 				</div>
 
@@ -901,5 +937,12 @@
 	</div>
 </div>
 <!-- END CHAT --> 
+<script>
+	$("#subs").select2();
+	$("#chaps").select2();
+//Multi Select
+ 	$("#secs").val([]).select2();
+ 	$("#subsecs").val([]).select2();
+ </script>
 </body>
 </html>
