single content piece html

--- a/HTML/miki-create.html
+++ b/HTML/miki-create.html
@@ -405,7 +405,7 @@
 							</div>
 							<div class="col-md-4">
 							    <div class="p-t-30 ">
-									<button type="button" class="btn btn-success btn-cons2 right" id="save-question"> <i class="fa fa-check"></i> Save</button>
+									<button type="button" class="btn btn-success btn-cons2 pull-right" id="save-question"> <i class="fa fa-check"></i> Save</button>
 								</div>
 							</div>											 
 						</div>
@@ -680,7 +680,7 @@
 					              </table>
 							</div>
 						</div>
-						<button type="button" class="btn btn-success btn-cons2 right m-t-20" id="save-question"> <i class="fa fa-plus"></i> Add</button>
+						<button type="button" class="btn btn-success btn-cons2 pull-right m-t-20" id="save-question"> <i class="fa fa-plus"></i> Add</button>
 					</div>
 				</div>
 				</div>
