title input change

--- a/HTML/miki-create.html
+++ b/HTML/miki-create.html
@@ -328,7 +328,7 @@
 
 				<div class="tiles white grid simple vertical green">
 					<div class="grid-title no-border">
-						<input type="text" class="" placeholder="Lecture Name">
+						<input type="text" class="" placeholder="Module Name">
 						<div class="tools">
 							<a href="javascript:;" class="collapse"></a>
 						</div>
