--- a/HTML/app-password.html
+++ b/HTML/app-password.html
@@ -28,23 +28,11 @@
         <div class="col-md-3">
         </div>
         <div class="col-md-6 well">
-          <h3 class="bold m-b-25">Welcome to Walmiki</h3>
+          <h3 class="bold m-b-25">Set your Password</h3>
 		 <form id="login-form" class="login-form" action="index.html" method="post">
 		 <div class="row">
 		 <div class="form-group col-md-12">
-            <label class="form-label">Username</label>
-            <div class="controls">
-				<div class="input-with-icon  right">                                       
-					<i class=""></i>
-					<input type="text" name="txtusername" id="txtusername" class="form-control">                                 
-				</div>
-            </div>
-          </div>
-          </div>
-		  <div class="row">
-          <div class="form-group col-md-12">
             <label class="form-label">Password</label>
-            <span class="help"></span>
             <div class="controls">
 				<div class="input-with-icon  right">                                       
 					<i class=""></i>
@@ -53,10 +41,22 @@
             </div>
           </div>
           </div>
+		  <div class="row">
+          <div class="form-group col-md-12">
+            <label class="form-label"> Confirm Password</label>
+            <span class="help"></span>
+            <div class="controls">
+				<div class="input-with-icon  right">                                       
+					<i class=""></i>
+					<input type="password" name="txtpassword" id="txtpasswordconfirm" class="form-control">                                 
+				</div>
+            </div>
+          </div>
+          </div>
 
           <div class="row">
             <div class="col-md-12">
-              <button class="btn btn-primary btn-cons pull-right" type="submit">Login</button>
+              <button class="btn btn-primary btn-cons pull-right" type="submit">Submit</button>
             </div>
           </div>
 		  </form>
