--- a/HTML/teacher-dashboard.html
+++ b/HTML/teacher-dashboard.html
@@ -17,6 +17,7 @@
 	<link href="assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/animate.min.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/mashmenu.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/plugins/bootstrap-select2/select2.css" rel="stylesheet" type="text/css" media="screen">
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/responsive.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/custom-icon-set.css" rel="stylesheet" type="text/css"/>
@@ -54,7 +55,7 @@
 		<script type="text/javascript" src="assets/plugins/datatables-responsive/js/datatables.responsive.js"></script>
 		<script type="text/javascript" src="assets/plugins/datatables-responsive/js/lodash.min.js"></script>
 		<script type="text/javascript" src="assets/js/datatables.js"></script>
-
+		<script src="assets/plugins/bootstrap-select2/select2.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="assets/js/row-link.js"></script>
 
 	<!-- END NEED TO WORK ON -->
@@ -294,43 +295,50 @@
 				          <ul class="nav nav-pills" id="teacherOptns">
 				            <li class="active"><a href="#takeClass">Take a Class</a></li>
 				            <li class=""><a href="#training">Start Training</a></li>
-				            <li class=""><a href="#tab4Inspire">Class Progress</a></li>
+				            <li class=""><a href="#progress">Class Progress</a></li>
 				          </ul>
 
 				          <div class="tab-content">
 				            <div class="tab-pane active" id="takeClass">
-				              <div class="row column-seperation">
-				                <div class="col-md-6">
-				                  <h3><span class="semi-bold">Sometimes</span> Small 
-				                    things in life means 
-				                    the most</h3>
-				                </div>
-				                <div class="col-md-6">
-				                  <h3 class="semi-bold">great tabs</h3>
-				                  <p class="light">default, the textarea element comes with a vertical scrollbar (and maybe even a horizontal scrollbar). This vertical scrollbar enables the user to continue entering and reviewing their text (by scrolling up and down).</p>
-				                </div>
-				              </div>
+				              <div class="m-b-15 semi-bold row">
+									<div class="col-md-6">
+										<label class="form-label bold">Class</label>
+										<select id="class" class="form-control select2" >
+								            <option value="1">1</option>
+								            <option value="2">2</option>
+								            <option value="3">3</option>
+								        </select>
+								    </div>
+								    <div class="col-md-6">
+								        <label class="form-label bold">Div</label>
+										<select id="div" class="form-control select2" >
+								            <option value="A">A</option>
+								            <option value="B">B</option>
+								            <option value="C">C</option>
+								        </select>
+								    </div>
+							    </div>
+							    <button type="button" class="btn btn-primary btn-xs btn-sm pull-right"> Go </button>
+							    <div class="clearfix"></div>
 				            </div>
 				            <div class="tab-pane" id="training">
-				              <div class="row">
-				                <div class="col-md-12">
-				                  <h3>“ Nothing is<span class="semi-bold"> impossible</span>, the word itself says 'I'm <span class="semi-bold">possible</span>'! ”</h3>
-				                  <p>A style represents visual customizations on top of a layout. By editing a style, you can use Squarespace's visual interface to customize your...</p>
-				                  <br>
-				                  <p>
-				                    <button type="button" class="btn btn-white btn-cons">White</button>
-				                    <button type="button" class="btn btn-success btn-cons">Success</button>
-				                  </p>
-				                </div>
-				              </div>
+				              <div class="m-b-15 semi-bold row">
+									<div class="col-md-12">
+										<label class="form-label bold">Class</label>
+										<select id="class-training" class="form-control select2" >
+								            <option value="1">1</option>
+								            <option value="2">2</option>
+								            <option value="3">3</option>
+								        </select>
+								    </div>
+							    </div>
+							    <button type="button" class="btn btn-primary btn-xs btn-sm pull-right"> Go </button>
+							    <div class="clearfix"></div>
 				            </div>
-				            <div class="tab-pane" id="tab4Inspire">
+				            <div class="tab-pane" id="progress">
 				              <div class="row">
 				                <div class="col-md-12">
-				                  <h3>Follow us &amp; get updated!</h3>
-				                  <p>Instantly connect to what's most important to you. Follow your friends, experts, favorite celebrities, and breaking news.</p>
-				                  <br>
-				                  <p><a href="#" class="btn-social"><i class="icon-facebook"></i></a> <a href="#" class="btn-social"><i class="icon-twitter"></i> </a> <a href="#" class="btn-social"><i class="icon-dribbble"></i></a> <a href="#" class="btn-social"><i class="icon-pinterest-sign"></i></a> <a href="#" class="btn-social"><i class="icon-tumblr"></i> </a> <a href="#" class="btn-social"><i class="icon-linkedin-sign"></i> </a> </p>
+				                  <h3>Coming Soon...</h3>
 				                </div>
 				              </div>
 				            </div>
@@ -354,6 +362,10 @@
 		e.preventDefault();
 		$(this).tab('show');
 	});
+
+	$('#class').select2();
+	$('#div').select2();
+	$('#class-training').select2();
 </script>
 </body>
 </html>
