list of modules html created, takeaclass html changes

--- a/HTML/teacher-takeclass.html
+++ b/HTML/teacher-takeclass.html
@@ -282,7 +282,7 @@
 						</div>
 					</div>
 				</div>
-      <div class="pull-left" id="Filters">
+      <!--<div class="pull-left" id="Filters">
         <div class="btn-group"> <a href="#" data-toggle="dropdown" class="btn dropdown-toggle btn-demo-space"> <span class="anim150">Status</span> <span class="caret"></span> </a>
           <ul class="dropdown-menu">
             <li class="active" data-filter="all" data-dimension="recreation"><a href="#">All</a></li>
@@ -293,7 +293,7 @@
         </div>
       </div>
 
-      <div class="clearfix"></div>
+      <div class="clearfix"></div>-->
       <div id="textbooks" class="takeClass">
         <!-- "TABLE" HEADER CONTAINING SORT BUTTONS (HIDDEN IN GRID MODE)-->
         <div class="list_header">
@@ -302,7 +302,7 @@
 
           <div class="meta modules">Modules <span class="sort anim150 asc" data-sort="data-class" data-order="desc"></span> <span class="sort anim150 desc" data-sort="data-class" data-order="asc"></span></div>
 
-          <div class="meta rec">Status</div>
+          <div class="meta rec">Modules Completed</div>
         </div>
         <!-- FAIL ELEMENT -->
         <div class="fail_element anim250">Sorry &mdash; we could not find any Textbooks matching matching these criteria</div>
@@ -320,7 +320,7 @@
             <p>10</p>
           </div>
           <div class="meta rec">
-            <p>In Progress</p>
+            <p>5 of 8</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Arches" data-class="5" data-area="76678.98">
@@ -335,7 +335,7 @@
             <p>5</p>
           </div>
           <div class="meta rec">
-            <p>Completed</p>
+            <p>9 of 10</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Crater Lake" data-class="2" data-area="183224.05">
@@ -350,7 +350,7 @@
             <p>2</p>
           </div>
           <div class="meta rec">
-            <p>Completed</p>
+            <p>10 of 10</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Denali" data-class="6" data-area="4740911.37">
@@ -365,7 +365,7 @@
             <p>6</p>
           </div>
           <div class="meta rec">
-            <p>Completed</p>
+            <p>4 of 4</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Glacier Bay" data-class="5" data-area="3223383.66">
@@ -380,7 +380,7 @@
             <p>5</p>
           </div>
           <div class="meta rec">
-            <p>Completed</p>
+            <p>6 of 6</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Grand Canyon" data-class="8" data-area="1217261.75">
@@ -395,7 +395,7 @@
             <p>8</p>
           </div>
           <div class="meta rec">
-            <p>In Progress</p>
+            <p>3 of 5</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Great Smoky Mountains" data-class="4" data-area="522418.90">
@@ -410,7 +410,7 @@
             <p>4</p>
           </div>
           <div class="meta rec">
-            <p>In Progress</p>
+            <p>1 of 12</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Haleakala" data-class="10" data-area="33264.62">
@@ -425,7 +425,7 @@
             <p>10</p>
           </div>
           <div class="meta rec">
-            <p>Not Started</p>
+            <p>0 of 6</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Yellowstone" data-class="3" data-area="2219790.71">
@@ -440,7 +440,7 @@
             <p>3</p>
           </div>
           <div class="meta rec">
-            <p>Completed</p>
+            <p>2 of 2</p>
           </div>
         </li>
         <li class="mix txtbook" data-name="Intermountain" data-class="9" data-area="146597.40">
@@ -455,7 +455,7 @@
             <p>9</p>
           </div>
           <div class="meta rec">
-            <p>Completed</p>
+            <p>0 of 8</p>
           </div>
         </li>
         <!-- END LIST OF textbooks -->
