--- a/HTML/teacher-modules.html
+++ b/HTML/teacher-modules.html
@@ -333,7 +333,7 @@
 						<div class="row">
 							<div class="col-lg-12">
 										<h4><span class="semi-bold">All</span> Modules</h4>
-								              <table class="table table-hover table-condensed table-fixed-layout table-bordered" id="questionsAll">
+								              <table class="table table-hover table-condensed table-fixed-layout table-bordered" id="modules">
 					                <thead>
 					                  <tr>
 					                  	<th style="width:8%"><div class="checkbox check-default" style="margin-right:auto;margin-left:auto;">
