--- a/HTML/teacher-takeclass.html
+++ b/HTML/teacher-takeclass.html
@@ -300,7 +300,7 @@
 
           <div class="meta name active desc" id="SortByName"> Name &nbsp; <span class="sort anim150 asc active" data-sort="data-name" data-order="desc"></span> <span class="sort anim150 desc" data-sort="data-name" data-order="asc"></span> </div>
 
-          <div class="meta modules">Modules <span class="sort anim150 asc" data-sort="data-class" data-order="desc"></span> <span class="sort anim150 desc" data-sort="data-class" data-order="asc"></span></div>
+          <div class="meta modules">Subjects <span class="sort anim150 asc" data-sort="data-class" data-order="desc"></span> <span class="sort anim150 desc" data-sort="data-class" data-order="asc"></span></div>
 
           <div class="meta rec">Modules Completed</div>
         </div>
@@ -317,7 +317,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>10</p>
+            <p>Chemistry</p>
           </div>
           <div class="meta rec">
             <p>5 of 8</p>
@@ -332,7 +332,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>5</p>
+            <p>Biology</p>
           </div>
           <div class="meta rec">
             <p>9 of 10</p>
@@ -347,7 +347,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>2</p>
+            <p>Biology</p>
           </div>
           <div class="meta rec">
             <p>10 of 10</p>
@@ -362,7 +362,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>6</p>
+            <p>Chemistry</p>
           </div>
           <div class="meta rec">
             <p>4 of 4</p>
@@ -377,7 +377,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>5</p>
+            <p>Biology</p>
           </div>
           <div class="meta rec">
             <p>6 of 6</p>
@@ -392,7 +392,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>8</p>
+            <p>Chemistry</p>
           </div>
           <div class="meta rec">
             <p>3 of 5</p>
@@ -407,7 +407,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>4</p>
+            <p>Biology</p>
           </div>
           <div class="meta rec">
             <p>1 of 12</p>
@@ -422,7 +422,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>10</p>
+            <p>Chemistry</p>
           </div>
           <div class="meta rec">
             <p>0 of 6</p>
@@ -437,7 +437,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>3</p>
+            <p>Chemistry</p>
           </div>
           <div class="meta rec">
             <p>2 of 2</p>
@@ -452,7 +452,7 @@
             </div>
           </div>
           <div class="meta modules">
-            <p>9</p>
+            <p>Chemistry</p>
           </div>
           <div class="meta rec">
             <p>0 of 8</p>
