teacher training html added, changes to modules

--- a/HTML/teacher-modules.html
+++ b/HTML/teacher-modules.html
@@ -324,7 +324,7 @@
 			<!-- END PAGE TITLE -->
 
 			<!-- BEGIN PlACE PAGE CONTENT HERE -->
-			<div class="teacher-app">
+			<div class="teacher-app moduleList">
 
 				<div class="tiles white grid simple vertical blue">
 					<div class="grid-title no-border">
@@ -349,12 +349,12 @@
 					                  <tr >
 					                    <td class="v-align-middle"><a href="#"></a>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</td>
 					                    <td class="v-align-middle"><span class="muted">20 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span> <button type="button" class="btn btn-white btn-small pull-right">Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span> <button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i> Replay</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td class="v-align-middle">es, but also the leap into electronic typesetting, remaining essentially unchanged. It was popul</td>
 					                    <td><span class="muted">35 mins</span></td>
-					                    <td><span class="muted"><span class="label label-info">In Progress</span></span><button type="button" class="btn btn-white btn-small pull-right "><i class="fa fa-pause"></i> Resume</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button>
+					                    <td><span class="muted"><span class="label label-info">In Progress</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-pause"></i> Resume</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button>
 					                    <div class="popover-markup">
 										  <div class="head hide">
 										    Schedule
@@ -367,47 +367,47 @@
 					                  <tr>
 					                    <td>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock,</td>
 					                    <td class="v-align-middle"><span class="muted">15 mins</span></td>
-					                    <td><span class="muted"><span class="label label-important">Not Started</span></span></td>
+					                    <td><span class="muted"><span class="label label-important">Not Started</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-play"></i> Start</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it </td>
 					                    <td class="v-align-middle"><span class="muted">35 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up </td>
 					                    <td class="v-align-middle"><span class="muted">23 mins</span></td>
-					                    <td><span class="muted"><span class="label label-important">Not Started</span></span></td>
+					                    <td><span class="muted"><span class="label label-important">Not Started</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-play"></i> Start</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</td>
 					                    <td class="v-align-middle"><span class="muted">16 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus</td>
 					                    <td class="v-align-middle"><span class="muted">14 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in</td>
-					                    <td class="v-align-middle"><span class="muted">45mins</span></td>
-					                    <td><span class="muted"><span class="label label-info">In Progress</span></span></td>
+					                    <td class="v-align-middle"><span class="muted">45 mins</span></td>
+					                    <td><span class="muted"><span class="label label-info">In Progress</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-pause"></i> Resume</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Many desktop publishing packages and web page editors now use Lorem</td>
 					                    <td class="v-align-middle"><span class="muted">18 mins</span></td>
-					                    <td><span class="muted"><span class="label label-important">Not Started</span></span></td>
+					                    <td><span class="muted"><span class="label label-important">Not Started</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-play"></i> Start</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in</td>
 					                    <td class="v-align-middle"><span class="muted">15 mins</span></td>
-					                    <td><span class="muted"><span class="label label-info">In Progress</span></span></td>
+					                    <td><span class="muted"><span class="label label-info">In Progress</span></span><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-pause"></i> Resume</button><button type="button" class="btn btn-white btn-small pull-right m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button></td>
 					                  </tr>
 					                  <tr>
 					                    <td>Many desktop publishing packages and web page editors now use Lorem</td>
 					                    <td class="v-align-middle"><span class="muted">12 mins</span></td>
-					                    <td><span class="muted"><span class="label label-success">Completed</span></span><button type="button" class="btn btn-white btn-small pull-right"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
+					                    <td><span class="muted"><span class="label label-success">Completed</span></span><div class="alert inline m-b-0 m-l-20 m-r-20 p-t-5 p-b-5"> 5th Jan 2014</div><button type="button" class="btn btn-white btn-small pull-right action"><i class="fa fa-repeat"></i>&nbsp;Replay</button></td>
 					                  </tr>
 					                </tbody>
 					              </table>
