changes to module details page, scroll added to body

--- a/HTML/miki.html
+++ b/HTML/miki.html
@@ -278,9 +278,9 @@
 				  <p>Dashboard</p>
 				</li>
 				<li>
-				  <a href="#"> Content Management</a>
+				  <a href="#"> Take a Class</a>
 				</li>
-				<li><a href="#" class="active">Add Question</a> </li>
+				<li><a href="#" class="active">Module Abc</a> </li>
 			 </ul>
 			<!-- BEGIN PAGE TITLE -->
 			<!--<div class="page-title"> 
@@ -293,12 +293,12 @@
 
 				<div class="tiles white grid simple vertical green">
 					<div class="grid-title no-border">
-						<h4 class="">Lecture <span class="semi-bold">ABC</span></h4>
+						<h4 class="">Module <span class="semi-bold">ABC</span></h4>
 						<div class="tools">
 							<a href="javascript:;" class="collapse"></a>
 						</div>
-						</div>
-						<div class="grid-body no-border" style="overflow: hidden; display: block;">
+					</div>
+					<div class="grid-body no-border" style="overflow: hidden; display: block;">
 						<div class="row ">
 							<div class="col-md-4">
 							    <div class="margin-bottom-20 ">
@@ -340,6 +340,25 @@
 							</div>											 
 						</div>
 					</div>
+					<div class="tiles grey text-grey p-t-10 p-l-15 p-r-10 p-b-10 b-grey b-b">
+						<div class="row">
+							<div class="col-sm-4">
+								<div class="modProgress">
+									<p class="bold small-text m-t-10 m-b-5">In Progress</p>
+								    <div class="progress">
+								        <div data-percentage="0%" style="width: 40%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
+								    </div>
+							   	</div>
+							</div>
+							<div class="col-sm-4">
+								<button type="button" class="btn btn-white btn-small pull-right" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button>
+							</div>
+							<div class="col-sm-4">
+								<button type="button" class="btn btn-white btn-small action"><i class="fa fa-pause"></i> Resume</button>
+							</div>
+						</div>
+				    	
+				    </div>
 				</div>
 				
 				<div id="myCanvas-miki" class="col-md-10">
